[package]
name = "cranelift-jit-demo"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
description = "Toy language implemented using cranelift-jit"
edition = "2018"

[dependencies]
peg = "0.6"
cranelift = { path = "../wasmtime/cranelift/umbrella" }
cranelift-module = { path = "../wasmtime/cranelift/module" }
cranelift-jit = { path = "../wasmtime/cranelift/jit" }
cranelift-native = { path = "../wasmtime/cranelift/native" }
